--- a/custom_addons/website_sualasoft/views/reference_portal.xml
+++ b/custom_addons/website_sualasoft/views/reference_portal.xml
@@ -4,6 +4,7 @@
         <t t-call="website.layout">
             <div id="wrap">
                 <div class="container mt-5 mb-5">
+
                     <div class="row">
                         <div class="col-lg-12">
                             <h1 class="mb-4">Nos Références</h1>
@@ -31,22 +32,21 @@
                         <t t-foreach="references" t-as="ref">
                             <div class="col-md-6 col-lg-4 mb-4">
                                 <div class="card h-100 shadow-sm">
-                                    <t t-if="ref.image">
-                                        <img t-attf-src="data:image/png;base64,#{ref.image}" class="card-img-top" alt="Client Logo"/>
-                                    </t>
-                                    <t t-else="">
-                                        <div class="card-img-top bg-light d-flex align-items-center justify-content-center" style="height: 200px;">
-                                            <i class="fa fa-briefcase fa-3x text-muted"></i>
-                                        </div>
-                                    </t>
+
+                                    <div class="card-img-top bg-light d-flex align-items-center justify-content-center" style="height: 200px;">
+                                        <i class="fa fa-briefcase fa-3x text-muted"></i>
+                                    </div>
+
                                     <div class="card-body">
                                         <h5 class="card-title">
                                             <t t-esc="ref.name"/>
                                         </h5>
+
                                         <p t-if="ref.industry" class="card-text text-muted small">
                                             <strong>Secteur:</strong>
                                             <t t-esc="ref.industry"/>
                                         </p>
+
                                         <div t-if="ref.service_ids" class="mb-2">
                                             <t t-foreach="ref.service_ids" t-as="service">
                                                 <span class="badge" t-attf-style="background-color: hsl(#{service.color}, 100%, 50%); color: white;">
@@ -54,10 +54,12 @@
                                                 </span>
                                             </t>
                                         </div>
+
                                         <p t-if="ref.description" class="card-text small">
                                             <t t-esc="ref.description[:150] + '...' if len(ref.description) > 150 else ref.description"/>
                                         </p>
-                                    </div>
+                                    </div> <!-- FIN card-body -->
+
                                     <div class="card-footer bg-transparent">
                                         <t t-if="ref.website">
                                             <a t-attf-href="#{ref.website}" target="_blank" class="btn btn-sm btn-primary">
@@ -65,7 +67,8 @@
                                             </a>
                                         </t>
                                     </div>
-                                </div>
+
+                                </div> <!-- FIN card -->
                             </div>
                         </t>
                     </div>
@@ -76,6 +79,7 @@
                             Aucune référence trouvée pour cette catégorie.
                         </div>
                     </t>
+
                 </div>
             </div>
         </t>
